fix(social networks): centered on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -10111,10 +10111,13 @@ a.a2a_i, i.a2a_i {
 .social-networks .block:first-of-type .page-header {
   margin-left: 15px;
   margin-right: 15px; }
-/* line 17, ../scss/fxj/_social-networks.scss */
+/* line 16, ../scss/fxj/_social-networks.scss */
+.social-networks .block:not(:first-of-type) .field--name-body {
+  text-align: center; }
+/* line 20, ../scss/fxj/_social-networks.scss */
 .social-networks .block:not(:first-of-type)[id*="youtubetimeline"] .field--name-body {
   overflow: hidden; }
-/* line 20, ../scss/fxj/_social-networks.scss */
+/* line 23, ../scss/fxj/_social-networks.scss */
 .social-networks .block:not(:first-of-type)[id*="youtubetimeline"] iframe {
   position: relative;
   top: -50px; }
